fixed version of css bleeding issue

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -31,7 +31,7 @@
   list-style: none;
 }
 
-header{
+.header {
   height: 100px;
   width: 100%;
   float: left;
@@ -41,30 +41,32 @@ header{
   padding-top: 30px;
   padding-left: 15%;
 }
-header > h1{
+
+.headerTitle {
   margin: 0;
   width: 100%;
 }
-header > h1 > div{
+
+.headerButtons {
   float: right;
-  width: 20%;
+  width: 22%;
   font-size: 1rem;
 }
 
-nav{
+.nav {
   height: 635px;
   width: 15%;
   float: left;
-  background-color: lightgray
+  background-color: lightgray;
 }
 
-ul{
+.ul {
   font-size: 1.1em;
   padding: 5%;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-ul li{
+.li {
   padding: 6%;
   margin: 2%;
   width: 100%;
@@ -72,7 +74,8 @@ ul li{
   border-radius: 5px;
   background-color: aquamarine;
 }
-button {
+
+.button {
   border-radius: 12px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -84,13 +87,14 @@ button {
   margin: 1%;
 }
 
-main{
+.main {
   float: left;
-  padding: 8%; 
+  padding: 8%;
   width: 85%;
   background-color: rgb(234, 234, 234);
 }
-main > button{
+
+.mainButton {
   float: left;
   width: 33.33%;
   margin: 1%;
@@ -98,17 +102,17 @@ main > button{
   border: 0;
   height: 370px;
 }
-main > section{
+
+.section {
   float: left;
   width: 30%;
   margin: 1%;
-  height: 300px;
+  height: 370px;
   background-color: rgb(245, 255, 62);
   padding: 3%;
   text-align: center;
   border-radius: 12px;
 }
-
 
 
 
